# esp32s2-wasm-demo

./: .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.entrypoint.sh  .gitpod.yml  Makefile  README.md  hello.c
firmware/: CMakeLists.txt  sdkconfig.defaults
firmware/components/wasm3/: CMakeLists.txt
firmware/main/: CMakeLists.txt  common.h  main.cpp  msc_flash.c  settings.cpp  status.c  storage.c  usb.c  wasm.cpp
wasm/: Makefile
